embeddedSearch API: Be less strict with argument types

The API functions deleteMostVisitedItem and undoMostVisitedItemDeletion
need an int parameter, but are called with int-inside-a-string by
third-party NTPs. This was legal with the old v8::Extension
implementation, but the Gin implementation from crrev.com/c/700443 is
stricter.
This CL relaxes the implementation so that strings that can be converted
to int are allowed again.

Bug: 777789
Change-Id: I784973ad7bb3626ff58c0d6831053a93e00a8016
Reviewed-on: https://chromium-review.googlesource.com/735608
Commit-Queue: Marc Treib <treib@chromium.org>
Reviewed-by: Chris Pickel <sfiera@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511152}
Former-commit-id: 7d0633dde4a03e0cf3411a04554e73559c835095